[tool.poetry]
name = "reminder"
version = "0.1.0"
description = "This is my 1st Python project"
authors = ["ESCF <flor.escobar@elca.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.13"
click = ">=8.2.1,<9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
flake8 = "^7.3.0"
pre-commit = "^4.3.0"
tox = "^4.30.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"